--- a/styles.css
+++ b/styles.css
@@ -142,8 +142,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header__logo-img--large {
-    width: 50px;  
+    width: 200px;  
     height: auto;
+    border-radius: 4px;
 }
 
 .nav__list {
